src/objects/Category_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Variance__c</fullName>
        <description>Displays whether Plan Amount is over or under the Client&apos;s Budget for this Category.</description>
        <formula>Budget_Amount__c  -  Actual_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays whether Plan Amount is over or under the Client&apos;s Budget for this Category.</inlineHelpText>
        <label>Budget Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Category Budgets</relationshipLabel>
        <relationshipName>Category_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Category Budgets</relationshipLabel>
        <relationshipName>Category_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Category Budget</label>
    <nameField>
        <displayFormat>CBID-{00000}</displayFormat>
        <label>Category Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>